# ZZEN9216

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  devcontainer.json  inOrder  installTest.c  main.c  tuesTuteCircle.c
Assessment2/: asterisk.c  bmpServer.c  mandelbrot  mandelbrot.c  mandelbrot.h  mandelbrotColor.c  mandelbrotServer  pixelColor.c  pixelColor.h
Week1/: 4003.txt  colourFace.c  fourFours.c  helloFace.c  inOrder.c  large.c  leapYear.c  numToWords  numberToWords copy.c  numberToWords.c
Week2/: aroundTheWorld.c  chessboard.c  colorFun  colorFun.c  flags  flags.c  largeFunction.c  main  main.c  numbers.c  numbers.h  poem  printPoem.c  terminalColors  terminalColors.c  terminalColors.h  testTerminalColors.c  triangle.c  wondrous  wondrous.c
Week2/arrays/: arrayExamScores.c  dynamicArrays.BAK.c  dynamicArrays.c  examScores.txt  examStats.txt  memoryAddresses.c  startingArrays.c
Week3/: area.c  complexNumber.c  mandelbrotFunctions  mandelbrotFunctions.c  mandelbrotServer
Week3/bitmaps/: bmpCreate.c  bmpShapeDrawing.c  bmpShapeDrawing.h  createBitmap  instructions.txt  myBitmap
Week4/: contains_gets.c  file.c  hash_matcher  hash_matcher.c  hash_string.h  my_zID.txt  sanitisingInputString.c  testGets
Week4/stringsInC/: sanitisingInputString.c
Week5/: birthdayAttack  birthdayAttack.c  birthdayAttackHt.c  hashString.h  input_1.txt  input_2.txt  littleBigEndian  littleToBig.c  which_endian  which_endian.c
