cmake_minimum_required(VERSION 3.23)
project(ZZEN9216 C)

set(CMAKE_C_STANDARD 99)

add_executable(ZZEN9216
#		main.c)

####### WEEK 1
#		Week1/helloFace.c)
#		Week1/fourFours.c)
#		Week1/large.c)
#		Week1/inOrder.c)
		Week1/numberToWords.c)
#		Week1/leapYear.c)

####### WEEK 2
#		Week2/largeFunction.c)
#		Week2/colorFun.c)
#		Week2/main Week2/numbers.c Week2/numbers.h)
#		Week2/terminalColors.h Week2/terminalColors.c Week2/printPoem.c Week2/testTerminalColors.c Week2/flags.c)
