cmake_minimum_required(VERSION 3.23)
project(ZZEN9216 C)

set(CMAKE_C_STANDARD 99)

add_executable(ZZEN9216
#		main.c)

####### WEEK 1
#		Week1/helloFace.c)
#		Week1/fourFours.c)
#		Week1/large.c)
#		Week1/inOrder.c)
#		Week1/numberToWords.c)
#		Week1/helloFace.c)
#		Week1/colourFace.c)
#		Week1/leapYear.c)

####### WEEK 2
#		Week2/largeFunction.c)
#		Week2/colorFun.c)
#		Week2/main Week2/numbers.c Week2/numbers.h)
#		Week2/terminalColors.h Week2/terminalColors.c Week2/printPoem.c Week2/testTerminalColors.c Week2/flags.c)
#		Week2/aroundTheWorld.c)
#		Week2/triangle.c)
#		Week2/chessboard.c)
#		Week2/wondrous.c)
#		Week2/arrays/startingArrays.c)
#		Week2/arrays/arrayExamScores.c)
#		Week2/arrays/memoryAddresses.c)
#		Week2/arrays/dynamicArrays.c)

####### WEEK 3
#		Week3/area.c)
		Week3/bitmaps/bmpCreate.c Week3/bitmaps/bmpShapeDrawing.c Week3/bitmaps/bmpShapeDrawing.h)
